[gd_scene load_steps=31 format=3 uid="uid://bcgegtsnnb4gq"]

[ext_resource type="Script" uid="uid://bb2ufopx6shlm" path="res://Scripts/PlayerScript.gd" id="1_6nwty"]
[ext_resource type="Texture2D" uid="uid://duwhh3t7s24br" path="res://Images/Del Rato/Del Rato Idle.png" id="2_tr25n"]
[ext_resource type="Texture2D" uid="uid://dia1pqfw0g2vx" path="res://Images/SpriteIdle1-Sheet.png" id="2_uuggy"]
[ext_resource type="Texture2D" uid="uid://drld783ltswdh" path="res://Images/revolver.png" id="5_6nwty"]
[ext_resource type="Texture2D" uid="uid://sylpoyi8f1v6" path="res://Images/Del Rato/Run Animation Skeleton-Sheet.png" id="5_aw52p"]
[ext_resource type="AudioStream" uid="uid://c3quiiboppqsr" path="res://Sounds/gun_shot_1.wav" id="7_tr25n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nxi7d"]
atlas = ExtResource("2_tr25n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr25n"]
atlas = ExtResource("2_uuggy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw52p"]
atlas = ExtResource("2_uuggy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1y1l"]
atlas = ExtResource("2_uuggy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwh6i"]
atlas = ExtResource("2_uuggy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8odu0"]
atlas = ExtResource("2_uuggy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h68a"]
atlas = ExtResource("2_uuggy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r53dp"]
atlas = ExtResource("2_uuggy")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuggy"]
atlas = ExtResource("2_tr25n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xj7t"]
atlas = ExtResource("5_aw52p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25his"]
atlas = ExtResource("5_aw52p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye8ic"]
atlas = ExtResource("5_aw52p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oimcg"]
atlas = ExtResource("5_aw52p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpedo"]
atlas = ExtResource("5_aw52p")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rbq"]
atlas = ExtResource("5_aw52p")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_562eg"]
atlas = ExtResource("5_aw52p")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_84f7o"]
atlas = ExtResource("5_aw52p")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6o62"]
atlas = ExtResource("5_aw52p")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m2kn"]
atlas = ExtResource("5_aw52p")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b0j5"]
atlas = ExtResource("5_aw52p")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1fr6y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxi7d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr25n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw52p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1y1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwh6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8odu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h68a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r53dp")
}],
"loop": true,
"name": &"idle22",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuggy")
}],
"loop": true,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xj7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25his")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye8ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oimcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpedo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_562eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84f7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6o62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m2kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b0j5")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e48y"]
size = Vector2(15, 24.1225)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwiga"]
size = Vector2(52, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuggy"]
size = Vector2(20, 26)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_6nwty")

[node name="AniPlayerSpr" type="AnimatedSprite2D" parent="."]
position = Vector2(2.27374e-13, -3)
scale = Vector2(1.00837, 1.00484)
sprite_frames = SubResource("SpriteFrames_1fr6y")
animation = &"run"

[node name="GunPoint" type="Marker2D" parent="AniPlayerSpr"]
position = Vector2(9.91699, 8.95665)
scale = Vector2(0.991699, 0.995183)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.0612502)
shape = SubResource("RectangleShape2D_0e48y")

[node name="pickup_range" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickup_range"]
position = Vector2(7, 0)
shape = SubResource("RectangleShape2D_xwiga")

[node name="Revolver_Sprite" type="Sprite2D" parent="."]
position = Vector2(26, -11)
texture = ExtResource("5_6nwty")

[node name="gun_tip" type="Node2D" parent="."]
position = Vector2(28, -2)

[node name="Hurtbox" type="Area2D" parent="." groups=["Player1Hurtbox"]]
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_uuggy")

[node name="revolver_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_tr25n")
volume_db = -6.315

[connection signal="area_entered" from="pickup_range" to="." method="_on_pickup_range_area_entered"]
[connection signal="area_exited" from="pickup_range" to="." method="_on_pickup_range_area_exited"]
